@@ -186,6 +186,11 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       cases and the munge process.
   e - Added instructions concerning the server parameter moab_array_compatible to the 
       README.array_changes file.
+  e - Added a new function DIS_tcp_close to the the code. This takes care of a problem
+      where TORQUE memory keeps growing because the read and write buffers associated
+      with each tcparray entry would grow to accommodate incoming and outgoing data
+      but would not shrink.
+  b - Replaced call to getpwnam_ext in pam_pbssimpleauth.c with getpwnam.  
 
 2.5.8
   e - added util function getpwnam_ext() that has retry and errno logging
